# homeworks

task2/: CMakeLists.txt  common.hpp  main.cpp
task3/: CMakeLists.txt
task3/src/: main.cpp
task3/src/hash_table/: hash_table.hpp
task3/src/list/: list.cpp  list.hpp
task4/: CMakeLists.txt  main.cpp
task4/src/: base.hpp  cond_var_limited.hpp  cond_var_unlimited.hpp  limited.hpp  msg.hpp  unlimited.hpp
